packages/language/antlr/GraphParser.js
// Generated from GraphParser.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4');
var GraphParserListener = require('./GraphParserListener').GraphParserListener;
var GraphParserVisitor = require('./GraphParserVisitor').GraphParserVisitor;

var GraphParserBase = require('./GraphParserBase').GraphParserBase;

var grammarFileName = "GraphParser.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map(function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [null, null, null, null, "'{'", "'}'", "'['", "']'",
  "'<'", "'>'", "'='", "'->'", "','", "';'", null, null,
  null, null, "'start'", "'goto'", "'if'", "'else'",
  "'switch'", "'case'", "'default'", "'import'", "'from'",
  "'export'"
];

var symbolicNames = [null, "HashBangLine", "SingleLineComment", "LineTerminator",
  "OpenBrace", "CloseBrace", "OpenBracket", "CloseBracket",
  "OpenAngleBracket", "CloseAngleBracket", "Assign",
  "Result", "Comma", "SemiColon", "Identifier", "Action",
  "Path", "WhiteSpaces", "Start", "Goto", "If", "Else",
  "Switch", "Case", "Default", "Import", "From", "Export",
  "String"
];

var ruleNames = ["program", "moduleStatement", "moduleStatements", "identifier",
  "path", "statement", "statementList", "inferenceDefinition",
  "block", "importStatement", "moduleItems", "module",
  "exportStatement", "stepStatement", "ifStatement", "expression",
  "switchStatement", "switchBlock", "caseClauses", "caseClause",
  "defaultClause", "gotoStatement", "startStatement"
];

function GraphParser(input) {
  GraphParserBase.call(this, input);
  this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
  this.ruleNames = ruleNames;
  this.literalNames = literalNames;
  this.symbolicNames = symbolicNames;
  return this;
}

GraphParser.prototype = Object.create(GraphParserBase.prototype);
GraphParser.prototype.constructor = GraphParser;

Object.defineProperty(GraphParser.prototype, "atn", {
  get: function() {
    return atn;
  }
});

GraphParser.EOF = antlr4.Token.EOF;
GraphParser.HashBangLine = 1;
GraphParser.SingleLineComment = 2;
GraphParser.LineTerminator = 3;
GraphParser.OpenBrace = 4;
GraphParser.CloseBrace = 5;
GraphParser.OpenBracket = 6;
GraphParser.CloseBracket = 7;
GraphParser.OpenAngleBracket = 8;
GraphParser.CloseAngleBracket = 9;
GraphParser.Assign = 10;
GraphParser.Result = 11;
GraphParser.Comma = 12;
GraphParser.SemiColon = 13;
GraphParser.Identifier = 14;
GraphParser.Action = 15;
GraphParser.Path = 16;
GraphParser.WhiteSpaces = 17;
GraphParser.Start = 18;
GraphParser.Goto = 19;
GraphParser.If = 20;
GraphParser.Else = 21;
GraphParser.Switch = 22;
GraphParser.Case = 23;
GraphParser.Default = 24;
GraphParser.Import = 25;
GraphParser.From = 26;
GraphParser.Export = 27;
GraphParser.String = 28;

GraphParser.RULE_program = 0;
GraphParser.RULE_moduleStatement = 1;
GraphParser.RULE_moduleStatements = 2;
GraphParser.RULE_identifier = 3;
GraphParser.RULE_path = 4;
GraphParser.RULE_statement = 5;
GraphParser.RULE_statementList = 6;
GraphParser.RULE_inferenceDefinition = 7;
GraphParser.RULE_block = 8;
GraphParser.RULE_importStatement = 9;
GraphParser.RULE_moduleItems = 10;
GraphParser.RULE_module = 11;
GraphParser.RULE_exportStatement = 12;
GraphParser.RULE_stepStatement = 13;
GraphParser.RULE_ifStatement = 14;
GraphParser.RULE_expression = 15;
GraphParser.RULE_switchStatement = 16;
GraphParser.RULE_switchBlock = 17;
GraphParser.RULE_caseClauses = 18;
GraphParser.RULE_caseClause = 19;
GraphParser.RULE_defaultClause = 20;
GraphParser.RULE_gotoStatement = 21;
GraphParser.RULE_startStatement = 22;


function ProgramContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = GraphParser.RULE_program;
  return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.EOF = function() {
  return this.getToken(GraphParser.EOF, 0);
};

ProgramContext.prototype.HashBangLine = function() {
  return this.getToken(GraphParser.HashBangLine, 0);
};

ProgramContext.prototype.moduleStatements = function() {
  return this.getTypedRuleContext(ModuleStatementsContext, 0);
};

ProgramContext.prototype.enterRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.enterProgram(this);
  }
};

ProgramContext.prototype.exitRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.exitProgram(this);
  }
};

ProgramContext.prototype.accept = function(visitor) {
  if (visitor instanceof GraphParserVisitor) {
    return visitor.visitProgram(this);
  } else {
    return visitor.visitChildren(this);
  }
};




GraphParser.ProgramContext = ProgramContext;

GraphParser.prototype.program = function() {

  var localctx = new ProgramContext(this, this._ctx, this.state);
  this.enterRule(localctx, 0, GraphParser.RULE_program);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 47;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    if (_la === GraphParser.HashBangLine) {
      this.state = 46;
      this.match(GraphParser.HashBangLine);
    }

    this.state = 50;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    if ((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << GraphParser.Identifier) | (1 << GraphParser.Start) | (1 << GraphParser.Import) | (1 << GraphParser.Export))) !== 0)) {
      this.state = 49;
      this.moduleStatements();
    }

    this.state = 52;
    this.match(GraphParser.EOF);
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};


function ModuleStatementContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = GraphParser.RULE_moduleStatement;
  return this;
}

ModuleStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ModuleStatementContext.prototype.constructor = ModuleStatementContext;

ModuleStatementContext.prototype.inferenceDefinition = function() {
  return this.getTypedRuleContext(InferenceDefinitionContext, 0);
};

ModuleStatementContext.prototype.importStatement = function() {
  return this.getTypedRuleContext(ImportStatementContext, 0);
};

ModuleStatementContext.prototype.exportStatement = function() {
  return this.getTypedRuleContext(ExportStatementContext, 0);
};

ModuleStatementContext.prototype.startStatement = function() {
  return this.getTypedRuleContext(StartStatementContext, 0);
};

ModuleStatementContext.prototype.enterRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.enterModuleStatement(this);
  }
};

ModuleStatementContext.prototype.exitRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.exitModuleStatement(this);
  }
};

ModuleStatementContext.prototype.accept = function(visitor) {
  if (visitor instanceof GraphParserVisitor) {
    return visitor.visitModuleStatement(this);
  } else {
    return visitor.visitChildren(this);
  }
};




GraphParser.ModuleStatementContext = ModuleStatementContext;

GraphParser.prototype.moduleStatement = function() {

  var localctx = new ModuleStatementContext(this, this._ctx, this.state);
  this.enterRule(localctx, 2, GraphParser.RULE_moduleStatement);
  try {
    this.state = 58;
    this._errHandler.sync(this);
    switch (this._input.LA(1)) {
      case GraphParser.Identifier:
        this.enterOuterAlt(localctx, 1);
        this.state = 54;
        this.inferenceDefinition();
        break;
      case GraphParser.Import:
        this.enterOuterAlt(localctx, 2);
        this.state = 55;
        this.importStatement();
        break;
      case GraphParser.Export:
        this.enterOuterAlt(localctx, 3);
        this.state = 56;
        this.exportStatement();
        break;
      case GraphParser.Start:
        this.enterOuterAlt(localctx, 4);
        this.state = 57;
        this.startStatement();
        break;
      default:
        throw new antlr4.error.NoViableAltException(this);
    }
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};


function ModuleStatementsContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = GraphParser.RULE_moduleStatements;
  return this;
}

ModuleStatementsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ModuleStatementsContext.prototype.constructor = ModuleStatementsContext;

ModuleStatementsContext.prototype.moduleStatement = function(i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(ModuleStatementContext);
  } else {
    return this.getTypedRuleContext(ModuleStatementContext, i);
  }
};

ModuleStatementsContext.prototype.enterRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.enterModuleStatements(this);
  }
};

ModuleStatementsContext.prototype.exitRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.exitModuleStatements(this);
  }
};

ModuleStatementsContext.prototype.accept = function(visitor) {
  if (visitor instanceof GraphParserVisitor) {
    return visitor.visitModuleStatements(this);
  } else {
    return visitor.visitChildren(this);
  }
};




GraphParser.ModuleStatementsContext = ModuleStatementsContext;

GraphParser.prototype.moduleStatements = function() {

  var localctx = new ModuleStatementsContext(this, this._ctx, this.state);
  this.enterRule(localctx, 4, GraphParser.RULE_moduleStatements);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 61;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    do {
      this.state = 60;
      this.moduleStatement();
      this.state = 63;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
    } while ((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << GraphParser.Identifier) | (1 << GraphParser.Start) | (1 << GraphParser.Import) | (1 << GraphParser.Export))) !== 0));
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};


function IdentifierContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = GraphParser.RULE_identifier;
  return this;
}

IdentifierContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IdentifierContext.prototype.constructor = IdentifierContext;

IdentifierContext.prototype.Identifier = function() {
  return this.getToken(GraphParser.Identifier, 0);
};

IdentifierContext.prototype.enterRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.enterIdentifier(this);
  }
};

IdentifierContext.prototype.exitRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.exitIdentifier(this);
  }
};

IdentifierContext.prototype.accept = function(visitor) {
  if (visitor instanceof GraphParserVisitor) {
    return visitor.visitIdentifier(this);
  } else {
    return visitor.visitChildren(this);
  }
};




GraphParser.IdentifierContext = IdentifierContext;

GraphParser.prototype.identifier = function() {

  var localctx = new IdentifierContext(this, this._ctx, this.state);
  this.enterRule(localctx, 6, GraphParser.RULE_identifier);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 65;
    this.match(GraphParser.Identifier);
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};


function PathContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = GraphParser.RULE_path;
  return this;
}

PathContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PathContext.prototype.constructor = PathContext;

PathContext.prototype.Path = function() {
  return this.getToken(GraphParser.Path, 0);
};

PathContext.prototype.enterRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.enterPath(this);
  }
};

PathContext.prototype.exitRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.exitPath(this);
  }
};

PathContext.prototype.accept = function(visitor) {
  if (visitor instanceof GraphParserVisitor) {
    return visitor.visitPath(this);
  } else {
    return visitor.visitChildren(this);
  }
};




GraphParser.PathContext = PathContext;

GraphParser.prototype.path = function() {

  var localctx = new PathContext(this, this._ctx, this.state);
  this.enterRule(localctx, 8, GraphParser.RULE_path);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 67;
    this.match(GraphParser.Path);
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};


function StatementContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = GraphParser.RULE_statement;
  return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.stepStatement = function() {
  return this.getTypedRuleContext(StepStatementContext, 0);
};

StatementContext.prototype.ifStatement = function() {
  return this.getTypedRuleContext(IfStatementContext, 0);
};

StatementContext.prototype.switchStatement = function() {
  return this.getTypedRuleContext(SwitchStatementContext, 0);
};

StatementContext.prototype.gotoStatement = function() {
  return this.getTypedRuleContext(GotoStatementContext, 0);
};

StatementContext.prototype.enterRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.enterStatement(this);
  }
};

StatementContext.prototype.exitRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.exitStatement(this);
  }
};

StatementContext.prototype.accept = function(visitor) {
  if (visitor instanceof GraphParserVisitor) {
    return visitor.visitStatement(this);
  } else {
    return visitor.visitChildren(this);
  }
};




GraphParser.StatementContext = StatementContext;

GraphParser.prototype.statement = function() {

  var localctx = new StatementContext(this, this._ctx, this.state);
  this.enterRule(localctx, 10, GraphParser.RULE_statement);
  try {
    this.state = 73;
    this._errHandler.sync(this);
    switch (this._input.LA(1)) {
      case GraphParser.Action:
        this.enterOuterAlt(localctx, 1);
        this.state = 69;
        this.stepStatement();
        break;
      case GraphParser.If:
        this.enterOuterAlt(localctx, 2);
        this.state = 70;
        this.ifStatement();
        break;
      case GraphParser.Switch:
        this.enterOuterAlt(localctx, 3);
        this.state = 71;
        this.switchStatement();
        break;
      case GraphParser.Goto:
        this.enterOuterAlt(localctx, 4);
        this.state = 72;
        this.gotoStatement();
        break;
      default:
        throw new antlr4.error.NoViableAltException(this);
    }
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};


function StatementListContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = GraphParser.RULE_statementList;
  return this;
}

StatementListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementListContext.prototype.constructor = StatementListContext;

StatementListContext.prototype.statement = function(i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(StatementContext);
  } else {
    return this.getTypedRuleContext(StatementContext, i);
  }
};

StatementListContext.prototype.enterRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.enterStatementList(this);
  }
};

StatementListContext.prototype.exitRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.exitStatementList(this);
  }
};

StatementListContext.prototype.accept = function(visitor) {
  if (visitor instanceof GraphParserVisitor) {
    return visitor.visitStatementList(this);
  } else {
    return visitor.visitChildren(this);
  }
};




GraphParser.StatementListContext = StatementListContext;

GraphParser.prototype.statementList = function() {

  var localctx = new StatementListContext(this, this._ctx, this.state);
  this.enterRule(localctx, 12, GraphParser.RULE_statementList);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 76;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    do {
      this.state = 75;
      this.statement();
      this.state = 78;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
    } while ((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << GraphParser.Action) | (1 << GraphParser.Goto) | (1 << GraphParser.If) | (1 << GraphParser.Switch))) !== 0));
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};


function InferenceDefinitionContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = GraphParser.RULE_inferenceDefinition;
  return this;
}

InferenceDefinitionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InferenceDefinitionContext.prototype.constructor = InferenceDefinitionContext;

InferenceDefinitionContext.prototype.identifier = function() {
  return this.getTypedRuleContext(IdentifierContext, 0);
};

InferenceDefinitionContext.prototype.Assign = function() {
  return this.getToken(GraphParser.Assign, 0);
};

InferenceDefinitionContext.prototype.block = function() {
  return this.getTypedRuleContext(BlockContext, 0);
};

InferenceDefinitionContext.prototype.enterRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.enterInferenceDefinition(this);
  }
};

InferenceDefinitionContext.prototype.exitRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.exitInferenceDefinition(this);
  }
};

InferenceDefinitionContext.prototype.accept = function(visitor) {
  if (visitor instanceof GraphParserVisitor) {
    return visitor.visitInferenceDefinition(this);
  } else {
    return visitor.visitChildren(this);
  }
};




GraphParser.InferenceDefinitionContext = InferenceDefinitionContext;

GraphParser.prototype.inferenceDefinition = function() {

  var localctx = new InferenceDefinitionContext(this, this._ctx, this.state);
  this.enterRule(localctx, 14, GraphParser.RULE_inferenceDefinition);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 80;
    this.identifier();
    this.state = 81;
    this.match(GraphParser.Assign);
    this.state = 82;
    this.block();
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};


function BlockContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = GraphParser.RULE_block;
  return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.OpenBrace = function() {
  return this.getToken(GraphParser.OpenBrace, 0);
};

BlockContext.prototype.CloseBrace = function() {
  return this.getToken(GraphParser.CloseBrace, 0);
};

BlockContext.prototype.statementList = function() {
  return this.getTypedRuleContext(StatementListContext, 0);
};

BlockContext.prototype.enterRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.enterBlock(this);
  }
};

BlockContext.prototype.exitRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.exitBlock(this);
  }
};

BlockContext.prototype.accept = function(visitor) {
  if (visitor instanceof GraphParserVisitor) {
    return visitor.visitBlock(this);
  } else {
    return visitor.visitChildren(this);
  }
};




GraphParser.BlockContext = BlockContext;

GraphParser.prototype.block = function() {

  var localctx = new BlockContext(this, this._ctx, this.state);
  this.enterRule(localctx, 16, GraphParser.RULE_block);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 84;
    this.match(GraphParser.OpenBrace);
    this.state = 86;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    if ((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << GraphParser.Action) | (1 << GraphParser.Goto) | (1 << GraphParser.If) | (1 << GraphParser.Switch))) !== 0)) {
      this.state = 85;
      this.statementList();
    }

    this.state = 88;
    this.match(GraphParser.CloseBrace);
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};


function ImportStatementContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = GraphParser.RULE_importStatement;
  return this;
}

ImportStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ImportStatementContext.prototype.constructor = ImportStatementContext;

ImportStatementContext.prototype.Import = function() {
  return this.getToken(GraphParser.Import, 0);
};

ImportStatementContext.prototype.moduleItems = function() {
  return this.getTypedRuleContext(ModuleItemsContext, 0);
};

ImportStatementContext.prototype.From = function() {
  return this.getToken(GraphParser.From, 0);
};

ImportStatementContext.prototype.path = function() {
  return this.getTypedRuleContext(PathContext, 0);
};

ImportStatementContext.prototype.enterRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.enterImportStatement(this);
  }
};

ImportStatementContext.prototype.exitRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.exitImportStatement(this);
  }
};

ImportStatementContext.prototype.accept = function(visitor) {
  if (visitor instanceof GraphParserVisitor) {
    return visitor.visitImportStatement(this);
  } else {
    return visitor.visitChildren(this);
  }
};




GraphParser.ImportStatementContext = ImportStatementContext;

GraphParser.prototype.importStatement = function() {

  var localctx = new ImportStatementContext(this, this._ctx, this.state);
  this.enterRule(localctx, 18, GraphParser.RULE_importStatement);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 90;
    this.match(GraphParser.Import);
    this.state = 91;
    this.moduleItems();
    this.state = 92;
    this.match(GraphParser.From);
    this.state = 93;
    this.path();
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};


function ModuleItemsContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = GraphParser.RULE_moduleItems;
  return this;
}

ModuleItemsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ModuleItemsContext.prototype.constructor = ModuleItemsContext;

ModuleItemsContext.prototype.OpenBrace = function() {
  return this.getToken(GraphParser.OpenBrace, 0);
};

ModuleItemsContext.prototype.CloseBrace = function() {
  return this.getToken(GraphParser.CloseBrace, 0);
};

ModuleItemsContext.prototype.identifier = function(i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(IdentifierContext);
  } else {
    return this.getTypedRuleContext(IdentifierContext, i);
  }
};

ModuleItemsContext.prototype.Comma = function(i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTokens(GraphParser.Comma);
  } else {
    return this.getToken(GraphParser.Comma, i);
  }
};


ModuleItemsContext.prototype.enterRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.enterModuleItems(this);
  }
};

ModuleItemsContext.prototype.exitRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.exitModuleItems(this);
  }
};

ModuleItemsContext.prototype.accept = function(visitor) {
  if (visitor instanceof GraphParserVisitor) {
    return visitor.visitModuleItems(this);
  } else {
    return visitor.visitChildren(this);
  }
};




GraphParser.ModuleItemsContext = ModuleItemsContext;

GraphParser.prototype.moduleItems = function() {

  var localctx = new ModuleItemsContext(this, this._ctx, this.state);
  this.enterRule(localctx, 20, GraphParser.RULE_moduleItems);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 95;
    this.match(GraphParser.OpenBrace);
    this.state = 101;
    this._errHandler.sync(this);
    var _alt = this._interp.adaptivePredict(this._input, 7, this._ctx)
    while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER) {
      if (_alt === 1) {
        this.state = 96;
        this.identifier();
        this.state = 97;
        this.match(GraphParser.Comma);
      }
      this.state = 103;
      this._errHandler.sync(this);
      _alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
    }

    this.state = 108;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    if (_la === GraphParser.Identifier) {
      this.state = 104;
      this.identifier();
      this.state = 106;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (_la === GraphParser.Comma) {
        this.state = 105;
        this.match(GraphParser.Comma);
      }

    }

    this.state = 110;
    this.match(GraphParser.CloseBrace);
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};


function ModuleContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = GraphParser.RULE_module;
  return this;
}

ModuleContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ModuleContext.prototype.constructor = ModuleContext;

ModuleContext.prototype.identifier = function() {
  return this.getTypedRuleContext(IdentifierContext, 0);
};

ModuleContext.prototype.inferenceDefinition = function() {
  return this.getTypedRuleContext(InferenceDefinitionContext, 0);
};

ModuleContext.prototype.enterRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.enterModule(this);
  }
};

ModuleContext.prototype.exitRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.exitModule(this);
  }
};

ModuleContext.prototype.accept = function(visitor) {
  if (visitor instanceof GraphParserVisitor) {
    return visitor.visitModule(this);
  } else {
    return visitor.visitChildren(this);
  }
};




GraphParser.ModuleContext = ModuleContext;

GraphParser.prototype.module = function() {

  var localctx = new ModuleContext(this, this._ctx, this.state);
  this.enterRule(localctx, 22, GraphParser.RULE_module);
  try {
    this.state = 114;
    this._errHandler.sync(this);
    var la_ = this._interp.adaptivePredict(this._input, 10, this._ctx);
    switch (la_) {
      case 1:
        this.enterOuterAlt(localctx, 1);
        this.state = 112;
        this.identifier();
        break;

      case 2:
        this.enterOuterAlt(localctx, 2);
        this.state = 113;
        this.inferenceDefinition();
        break;

    }
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};


function ExportStatementContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = GraphParser.RULE_exportStatement;
  return this;
}

ExportStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExportStatementContext.prototype.constructor = ExportStatementContext;

ExportStatementContext.prototype.Export = function() {
  return this.getToken(GraphParser.Export, 0);
};

ExportStatementContext.prototype.module = function() {
  return this.getTypedRuleContext(ModuleContext, 0);
};

ExportStatementContext.prototype.enterRule = function(listener) {
  if (listener instanceof GraphParserListener) {
    listener.enterExportStatement(this);
  }
};
